# hypernode

./: .gitignore  AGENTIC_FLOW.md  AgentPlan.md  AppPlan.md  BackendConsolidationPlan.md  FinalProductPlan.md  FlowComparisonAudit.md  LICENSE  Phase1AgentTestPack.md  Phase1Plan.md  Phase1Rules.md  Phase1Summary.md  Phase2BucketPolicy.md  Phase2Plan.md  Phase2QueryTemplates.md  Phase2RetrievalIntents.md  Phase2Summary.md  Phase3MultiActionSpec.md  Phase3Plan.md  Phase3SchemaEvolutionPlan.md  Phase3Summary.md  Phase4Plan.md  Phase5Plan.md  README.md  RefactorBlueprint.md  SampleOutput.md  [Participants] PROJECT2030 Official Handbook.md  main_main.txt  main_pkg.txt  main_readme.txt  prototype_main.txt  prototype_pkg.txt  prototype_readme.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  emergency.py  main.py  pyproject.toml  requirements.txt  seed_firestore.py  test_agent.py  test_mvp_flow.py  test_phase1.py  test_vertex_search.py  triage_agent.py  vitals.py
backend/agents/: __init__.py  orchestrator.py
backend/app/: main.py
backend/data/: clinical_reasoning_policy.json  medical_guidance_fallback.json  phase2_bucket_query_policy.json  phase2_retrieval_policy.json  phase2_test_scenarios.json  phase3_reasoning_policy.json  phase3_test_scenarios.json  phase4_interaction_scenarios.json  protocol_grounding_policy.json  reasoning_support_policy.json  sample_patient.json
backend/db/: __init__.py  firebase_client.py  models.py
backend/experiments/: adk_vertex_search_smoke_test.py
backend/legacy/: __init__.py  emergency.py  route_emergency.py  vitals.py  (+1 more)
(+130 files in other folders)
